LC-466: update pom and javadoc